[WIP] Fix path issues on windows