@@ -19,10 +19,8 @@
  */
 package org.wildfly.extras.patch.test;
 
-import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
-
 import java.io.File;
-import java.net.URL;
+import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -32,13 +30,15 @@ import java.util.List;
 import org.junit.Assert;
 import org.junit.BeforeClass;
 import org.junit.Test;
+import org.wildfly.extras.patch.Package;
 import org.wildfly.extras.patch.PatchException;
 import org.wildfly.extras.patch.PatchId;
-import org.wildfly.extras.patch.Repository;
-import org.wildfly.extras.patch.Package;
 import org.wildfly.extras.patch.PatchTool;
 import org.wildfly.extras.patch.PatchToolBuilder;
+import org.wildfly.extras.patch.Repository;
 import org.wildfly.extras.patch.utils.IOUtils;
+
+import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
 
 public class SimpleRepositoryTest {
 
@@ -62,8 +62,8 @@ public class SimpleRepositoryTest {
     @Test
     public void testSimpleAccess() throws Exception {
         
-        URL urlA = new URL("file:./target/repos/SimpleRepositoryTest/repoA");
-        PatchTool patchTool = new PatchToolBuilder().repositoryUrl(urlA).build();
+        URI urlA = new URI("file:///./target/repos/SimpleRepositoryTest/repoA");
+        PatchTool patchTool = new PatchToolBuilder().repositoryUri(urlA).build();
         Repository repo = patchTool.getPatchRepository();
         
         PatchId patchId = repo.addArchive(Archives.getZipUrlFoo100());
